@@ -1,3 +1,7 @@
+2019-10-14  Mihailo Stojanovic  <mistojanovic@wavecomp.com>
+
+	* gcc.target/mips/constant-spill.c: New test.
+
 2019-10-14  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/92069
