@@ -1,3 +1,8 @@
+2019-10-14  Mihailo Stojanovic  <mistojanovic@wavecomp.com>
+
+	* config/mips/mips.c (mips_cannot_force_const_mem): Reject
+	vector constants.
+
 2019-10-14  Iain Sandoe  <iain@sandoe.co.uk>
 
 	* config/darwin.c: Use unsigned ints for the picbase label
